--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "backgammon",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "app copy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1"
+  }
 }
